--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -335,6 +335,7 @@ li.ctr-day {
 				margin-left: 0;
 				color: #fff;
 				text-decoration: none;
+				cursor: pointer;
 				transition: all 0.2s ease;
 				&:hover {
 					color: #96ff00;
