--- a/components/sass/email-host-modal.scss
+++ b/components/sass/email-host-modal.scss
@@ -1,3 +1,7 @@
+body.noscrollz {
+  overflow: hidden;
+}
+
 /* The Modal (background) */
 #theModal {
   display: none; /* turn this modal on or off for dev at btm of script */
@@ -15,7 +19,7 @@
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: 15% auto 0;
+  margin: 60px auto 0;
   padding: 0px;
   border: 1px solid #fff;
   width: 90%;
@@ -25,7 +29,6 @@
   animation-name: animatetop;
   animation-duration: 0.4s;
 }
-
 
 /* The Close Button */
 .closefp {
@@ -65,6 +68,10 @@
     line-height: 1.5em;
   }
 }
+.modal-footer {
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
 .modal-wrap {
   width: 90%;
   margin: 1em auto;
@@ -81,9 +88,10 @@
   background-color: #313131;
   color: #fff;
 
-  form.edit-link-form {
+  form.emh-form {
     width: 100%;
-    input.edit-input {
+    input.edit-input,
+    textarea.edit-input {
       margin-top: 0.2em;
       padding: 0.3em;
       font-size: 1.2em;
@@ -93,23 +101,28 @@
       color: #fff;
       outline: none;
       border: none;
+      resize: none;
       &:hover,
       &:focus {
         outline: none;
       }
     }
-    input.link-name {
+    input.link-name,
+    input.link-email {
       margin-bottom: 1em;
+    }
+    textarea.link-msg {
+      width: 100%;
+      height: 8em;
     }
     .submit-links {
       width: 100%;
       display: flex;
-      justify-content: space-aroung;
+      justify-content: space-around;
       margin: 1em auto;
-      input.update,
-      input.delete {
-        margin-top: 1em;
-        width: 48%;
+      input.send {
+        // margin-top: 1em;
+        width: 100%;
         border: 1px solid green;
         padding: 1em;
         color: #fff;
@@ -139,12 +152,27 @@
         color: #000;
       }
     }
+    span.success-emh {
+      background-color: #52910f;
+      text-align: center;
+    }
   }
 }
+}
 
-
-
-
+span.sending-msg {
+  background-color: #92fc8a;
+  color: #086c00;
+  padding: 20px;
+  border: 1px solid #736552;
+  margin-top: 0.5em;
+  display: block;
+  width: 100%;  
+}
+.alert.alert-warning {
+  background-color: #ffc6c6;
+  color: #c72222;
+  line-height: 1.5em;
 }
 
 
