--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -150,6 +150,7 @@ li.ctr-day {
 	.glance-group-title {
 		flex: 2;
 		padding: 0em 0.5em;
+		line-height: 1.5em;
 	}
 	.glance-mtg-type {
 		justify-content: flex-end;
