--- a/style-expanded.css
+++ b/style-expanded.css
@@ -480,6 +480,7 @@ li.ctr-day .day-content {
   -ms-flex: 2;
       flex: 2;
   padding: 0em 0.5em;
+  line-height: 1.5em;
 }
 .daily-glance .glance-mtg-type {
   -ms-flex-pack: end;
@@ -1883,7 +1884,6 @@ span.yo-email {
 .manage-simple {
   width: 100%;
   max-width: 900px;
-  text-align: justify;
   margin-bottom: 1em;
   border-bottom: 1px solid #fff;
   padding-bottom: 0.5em;
@@ -2204,13 +2204,22 @@ ul.manage-weekdays .day:hover {
 .manage-glance .glance-mtg-time {
   -ms-flex: 2 1 0;
       flex: 2 1 0;
+  padding: 0 1em 0 0;
+  width: 20%;
+  min-width: 150px;
 }
 .manage-glance .glance-group-title {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  width: 70%;
+  line-height: 1.5em;
 }
 .manage-glance .glance-mtg-type {
-  padding: 0 2em;
+  padding: 0 1em;
+}
+.manage-glance .glance-mtg-type p {
+  display: -ms-flexbox;
+  display: flex;
 }
 .manage-glance.draft {
   background-color: rgba(32, 93, 168, 0.3);
@@ -2258,13 +2267,22 @@ ul.manage-weekdays .day:hover {
 .manage-glance-review .glance-mtg-time {
   -ms-flex: 2 1 0;
       flex: 2 1 0;
+  padding: 0 1em 0 0;
+  width: 20%;
+  min-width: 150px;
 }
 .manage-glance-review .glance-group-title {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  width: 70%;
+  line-height: 1.5em;
 }
 .manage-glance-review .glance-mtg-type {
   padding: 0em 1.5em 0em 0.5em;
+}
+.manage-glance-review .glance-mtg-type p {
+  display: -ms-flexbox;
+  display: flex;
 }
 .manage-glance-review.draft {
   background: rgba(32, 93, 168, 0.3);
@@ -2964,6 +2982,14 @@ form#manage-mtg label.pdf-label {
     padding: 0px;
   }
 
+  .manage-glance .glance-mtg-time {
+    width: 100%;
+  }
+
+  .manage-glance .glance-group-title {
+    width: 100%;
+  }
+
   form#manage-mtg {
     -ms-flex-direction: column;
         flex-direction: column;
@@ -3030,7 +3056,7 @@ form#manage-mtg label.pdf-label {
     margin-bottom: 1em;
   }
   .btm-notes .visible {
-    padding: 0;
+    padding: 1em 0em;
   }
 
   .weekday-edit-wrap form {
@@ -3062,6 +3088,8 @@ form#manage-mtg label.pdf-label {
     -ms-flex-pack: center;
         justify-content: center;
     text-align: right;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
 
   ul.manage-weekdays div.manage-day-toggle {
