--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1870,12 +1870,13 @@ span.yo-email {
 }
 
 .confirm {
-  align-text: center;
+  text-align: center;
   font-size: 3.2em;
   margin-bottom: 0.3em;
   font-family: 'Special Elite', cursive;
   color: #df9327;
   line-height: 1em;
+  transition: all 0.2s ease;
 }
 .confirm.warning {
   color: #de2c0d;
@@ -2187,6 +2188,8 @@ ul.manage-weekdays .day:hover {
 .manage-glance {
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
   -ms-flex-pack: justify;
       justify-content: space-between;
   cursor: pointer;
@@ -2195,31 +2198,28 @@ ul.manage-weekdays .day:hover {
   color: inherit;
   border-top: 1px solid transparent;
   border-right: 1px solid transparent;
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
   border-right: 1px solid transparent;
 }
 .manage-glance:hover {
   background-color: rgba(0, 0, 0, 0.2);
 }
 .manage-glance .glance-mtg-time {
-  -ms-flex: 2 1 0;
-      flex: 2 1 0;
   padding: 0 1em 0 0;
-  width: 20%;
+  width: 100%;
   min-width: 150px;
 }
 .manage-glance .glance-group-title {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  width: 70%;
+  width: 100%;
   line-height: 1.5em;
 }
 .manage-glance .glance-mtg-type {
   padding: 0 1em;
+  text-align: right;
 }
 .manage-glance .glance-mtg-type p {
-  display: -ms-flexbox;
-  display: flex;
+  width: 100%;
+  text-align: right;
 }
 .manage-glance.draft {
   background-color: rgba(32, 93, 168, 0.3);
@@ -2963,7 +2963,19 @@ form#manage-mtg label.pdf-label {
   background-color: #205da8;
 }
 
+@media screen and (max-width: 975px) {
+  div.tooltip.right .tooltiptext {
+    margin-left: -135px;
+  }
+  div.tooltip.right .tooltiptext::after {
+    left: 90%;
+  }
+}
 @media screen and (max-width: 800px) {
+  .confirm {
+    font-size: 2.5em;
+  }
+
   .manage-simple {
     text-align: left;
   }
@@ -2975,11 +2987,14 @@ form#manage-mtg label.pdf-label {
 
   .manage-glance-review .glance-group-title {
     margin: 0.5em 0;
+    width: 100%;
   }
 
   .manage-glance-review .glance-mtg-type {
     text-align: right;
     padding: 0px;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
 
   .manage-glance .glance-mtg-time {
@@ -3084,9 +3099,6 @@ form#manage-mtg label.pdf-label {
   }
 
   .manage-glance .glance-mtg-type {
-    padding: 0px;
-    -ms-flex-pack: center;
-        justify-content: center;
     text-align: right;
     -ms-flex-item-align: end;
         align-self: flex-end;
@@ -3094,6 +3106,10 @@ form#manage-mtg label.pdf-label {
 
   ul.manage-weekdays div.manage-day-toggle {
     padding: 0.5em;
+  }
+
+  a.manage-edit {
+    margin-left: 1.6em;
   }
 
   a.manage-delete {
