--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -8,9 +8,14 @@ footer {
   padding-top: 60px;
   padding-bottom: 80px;
   flex: 1;
-   p.form-note {
+  #email-bob {
+    width: 94%;
+    max-width: 420px;
+    margin: 0 auto;
+  }
+  p.form-note {
     width: 100%;
-    max-width: 400px;
+    // max-width: 400px;
     margin: 1em auto;
     text-align: left;
     line-height: 1.5em;
@@ -20,6 +25,7 @@ footer {
     background: none;
     border: none;
     font-size: 1em;
+    // width: 100%;
     color: #fff;
     text-decoration: none;
     padding: 8px 18px;
@@ -39,8 +45,8 @@ footer {
       } 
       &.active {
         border-bottom: 1px dotted #808080;
-        width: 96%;
-        max-width: 400px;
+        // width: 96%;
+        // max-width: 400px;
         text-align: center;
       }
       .close-left {
@@ -54,13 +60,18 @@ footer {
   }
   form#contactForm {
     width: 100%;
-    max-width: 400px;
+    // max-width: 400px;
     margin: 1.5em auto 5em auto;
     ul {
       margin: 0;
       padding: 0;
       li {
         list-style: none;
+      }
+      li.embtn {
+        list-style: none;
+        // display: flex;
+        text-align: right;
       }
     }
     label {
@@ -84,7 +95,7 @@ footer {
     textarea#comments {
       height: 6em;
       width: 100%;
-      max-width: 400px;
+      // max-width: 400px;
       margin-top: .2em;
       margin-bottom: .2em;
       font-size: 1.2em;
@@ -142,19 +153,20 @@ footer {
     }
 
     input#emailBob {
-      // display: inline-block;
-      float: left;
-      width: 150px;
-      padding: 10px;
-      // margin: 10px 0;
+      width: 100%;
+      padding: 1em 1.5em;
+      font-size: 16px;
+      // to account for
+      // border on input above...
+      margin-right: 1px;
       text-align: center;
-      // border-radius: 3px;
       border: 1px solid #233851;
       background-color: #565656;
       color: #fff;
       cursor: pointer;
       outline: none;
       transition: all 0.2s ease;
+      -webkit-appearance: none;
       &:hover {
         background-color: #82c33a;
         color: #fff;
@@ -262,6 +274,7 @@ footer {
     display: block;
     width: 90%;
     text-align: right;
+    // margin-right: 50px;
     // line-height: 8em;
     margin-top: 6em;
     margin-bottom: 4em;
@@ -307,8 +320,8 @@ div#success-wrap {
 @media screen and (max-width: 430px) {
   footer {
     form#contactForm {
-      width: 94%;
-      max-width: 420px;
+      // width: 94%;
+      // max-width: 420px;
       input#name,
       input#email {
         height: 30px;
@@ -318,8 +331,14 @@ div#success-wrap {
       display: block;
       padding: 8px 0px;
       margin: 0 auto;
-      width: 98%;
-      max-width: 400px; 
+      // width: 98%;
+      // max-width: 400px; 
+      .close-left {
+        padding-left: 0px;
+      }
+      .close-right {
+        padding-right: 0px;
+      }
       &:hover {
         background-color: inherit;
         border: 1px solid transparent;
