Done - Transfer working

--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -334,6 +334,7 @@ li.ctr-day {
 			display: block;
 			padding: 1em;
 			a {
+				display: flex;
 				margin-left: 0;
 				color: #fff;
 				text-decoration: none;
