--- a/style-expanded.css
+++ b/style-expanded.css
@@ -660,6 +660,8 @@ li.ctr-day .day-content {
   padding: 1em;
 }
 .email-host a {
+  display: -ms-flexbox;
+  display: flex;
   margin-left: 0;
   color: #fff;
   text-decoration: none;
@@ -3328,6 +3330,99 @@ span.sending-msg {
   to {
     top: 0;
     opacity: 1;
+  }
+}
+#host-manage-wrap {
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  line-height: 1.5em;
+  padding: 100px 5px;
+}
+
+#transfer-host {
+  width: 100%;
+  max-width: 600px;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+#transfer-host h2 {
+  padding-bottom: 0.25em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+  font-size: 1.6em;
+}
+#transfer-host p {
+  margin: 0.25em 0 1.5em;
+}
+#transfer-host form {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+}
+#transfer-host form p {
+  margin-bottom: 0.25em;
+}
+#transfer-host form input {
+  width: 100%;
+  height: 1.5em;
+  padding: 0.25em;
+  border: none;
+  outline: none;
+  border-radius: none;
+  font-size: 1.25em;
+  background-color: rgba(255, 255, 255, 0.25);
+  color: #fff;
+  transition: all 0.2s ease;
+}
+#transfer-host #trans-msg {
+  margin: 0.5em 0;
+}
+#transfer-host #trans-msg p.host-disclaimer {
+  border: 1px dashed rgba(255, 255, 255, 0.25);
+  padding: 1em;
+  font-size: 0.75em;
+  line-height: 1.5em;
+}
+#transfer-host #trans-msg span.sending-msg {
+  text-align: center;
+}
+#transfer-host a#transfer-this {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+  padding: 1em;
+  color: #fff;
+  background-color: #40b208;
+  transition: all 0.2s ease;
+}
+#transfer-host a#transfer-this:hover {
+  background-color: rgba(64, 178, 8, 0.4);
+}
+
+@media screen and (max-width: 440px) {
+  #host-manage-wrap {
+    padding: 20px 5px;
+  }
+
+  #transfer-host form input {
+    font-size: 1em;
   }
 }
 .foot {
