Suspend user integrated along with Thor mode

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -255,6 +255,9 @@ a.logout {
 	color: #fff;
 	text-decoration: none;
 }
+a.logout.thor {
+	background-color: #931919;
+}
 a.welcome-log {
 	color: #fda1a1;
 	text-decoration: none;
