--- a/components/sass/host-management.scss
+++ b/components/sass/host-management.scss
@@ -8,7 +8,7 @@
   align-items: center;
   flex-wrap: wrap;
   line-height: 1.5em;
-  padding: 100px 5px;
+  padding: 50px 5px;
 }
 #transfer-host {
 	width: 100%;
@@ -42,9 +42,22 @@
 			color: #fff;
 			transition: all 0.2s ease;
 		}
+		textarea {
+			width: 100%;
+			height: 8em;
+			padding: 0.25em;
+			border: none;
+			outline: none;
+			border-radius: none;
+			font-size: 1.25em;
+			background-color: rgba(255,255,255,0.25);
+			color: #fff;
+			transition: all 0.2s ease;
+		}
 	}
 
-	#trans-msg {
+	#trans-msg,
+	#sus-msg {
 		margin: 0.5em 0;
 		p.host-disclaimer {
 			// margin: 0.5em 0;
@@ -57,7 +70,9 @@
 			text-align: center;
 		}
 	}
-	a#transfer-this {
+	a#transfer-this,
+	a#suspend-user,
+	a#not-yourself {
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -81,9 +96,36 @@
 	#transfer-host {
 		form {
 			input {
-				font-size: 1em;
+				font-size: 1.5em;
+				padding: 1em 0.25em;
 			}
 		}
 	}
+}
 
+#sus-wrap { //suspended msg
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 96%;
+	max-width: 600px;
+	line-height: 1.5em;
+	p {
+		width: 100%;
+		text-align: left;
+
+	}
+	p.sus-header {
+		margin: 1em 0 0;
+		background-color: rgba(0,0,0,0.9);
+		color: #757575;
+		padding: 0.5em 0.5em 0.5em 1em;
+	}
+	p.sus-notes {
+		margin: 0 0 1em;
+		padding: 1em;
+		background-color: rgba(0,0,0,0.6);
+	}
 }
