--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1667,6 +1667,10 @@ a.logout {
   text-decoration: none;
 }
 
+a.logout.thor {
+  background-color: #931919;
+}
+
 a.welcome-log {
   color: #fda1a1;
   text-decoration: none;
@@ -3347,7 +3351,7 @@ span.sending-msg {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   line-height: 1.5em;
-  padding: 100px 5px;
+  padding: 50px 5px;
 }
 
 #transfer-host {
@@ -3385,19 +3389,36 @@ span.sending-msg {
   color: #fff;
   transition: all 0.2s ease;
 }
-#transfer-host #trans-msg {
+#transfer-host form textarea {
+  width: 100%;
+  height: 8em;
+  padding: 0.25em;
+  border: none;
+  outline: none;
+  border-radius: none;
+  font-size: 1.25em;
+  background-color: rgba(255, 255, 255, 0.25);
+  color: #fff;
+  transition: all 0.2s ease;
+}
+#transfer-host #trans-msg,
+#transfer-host #sus-msg {
   margin: 0.5em 0;
 }
-#transfer-host #trans-msg p.host-disclaimer {
+#transfer-host #trans-msg p.host-disclaimer,
+#transfer-host #sus-msg p.host-disclaimer {
   border: 1px dashed rgba(255, 255, 255, 0.25);
   padding: 1em;
   font-size: 0.75em;
   line-height: 1.5em;
 }
-#transfer-host #trans-msg span.sending-msg {
+#transfer-host #trans-msg span.sending-msg,
+#transfer-host #sus-msg span.sending-msg {
   text-align: center;
 }
-#transfer-host a#transfer-this {
+#transfer-host a#transfer-this,
+#transfer-host a#suspend-user,
+#transfer-host a#not-yourself {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: center;
@@ -3412,7 +3433,9 @@ span.sending-msg {
   background-color: #40b208;
   transition: all 0.2s ease;
 }
-#transfer-host a#transfer-this:hover {
+#transfer-host a#transfer-this:hover,
+#transfer-host a#suspend-user:hover,
+#transfer-host a#not-yourself:hover {
   background-color: rgba(64, 178, 8, 0.4);
 }
 
@@ -3422,9 +3445,40 @@ span.sending-msg {
   }
 
   #transfer-host form input {
-    font-size: 1em;
+    font-size: 1.5em;
+    padding: 1em 0.25em;
   }
 }
+#sus-wrap {
+  min-height: 100vh;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  width: 96%;
+  max-width: 600px;
+  line-height: 1.5em;
+}
+#sus-wrap p {
+  width: 100%;
+  text-align: left;
+}
+#sus-wrap p.sus-header {
+  margin: 1em 0 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #757575;
+  padding: 0.5em 0.5em 0.5em 1em;
+}
+#sus-wrap p.sus-notes {
+  margin: 0 0 1em;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .foot {
   border-top: 1px solid #999999;
   position: fixed;
