Went ham on this thing
Lots of sweeping user and admin management updates - all but working. still need to make it pretty and sweep up a fair amount of debris but going camping...

--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -255,7 +255,7 @@ a.logout {
 	color: #fff;
 	text-decoration: none;
 }
-a.logout.thor {
+a.logout.odin {
 	background-color: #931919;
 }
 a.welcome-log {
