--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -167,8 +167,8 @@ li.ctr-day {
 	position: relative;
 	margin: 0 auto;
 	background-color: rgba(0,0,0,0.3);
-	border-bottom-right-radius: 10px;
-	border-bottom-left-radius: 10px;
+	// border-bottom-right-radius: 10px;
+	// border-bottom-left-radius: 10px;
 	&.draft-bkg {
 		//background: url('_images/draft-bkg.png') no-repeat center center;
 		}
@@ -188,6 +188,9 @@ li.ctr-day {
 		}
 		p {
 			line-height: 1.5em;
+		}
+		p.dd-meet {
+			margin-bottom: 1em;
 		}
 		p.zoom-info {
 			text-decoration: underline;
@@ -437,13 +440,14 @@ input.day-values
 .zoom-id,
 a.zoom {
   width: 165px;
+  width: 90%;
   text-align: center;
   font-family: inherit;
   font-size: inherit;
   background-color: #fff;
   color: #313131;
   border: 1px solid #757575;
-  border-radius: 3px;
+  // border-radius: 3px;
   padding: 8px 0px;
   transition: all 0.2s ease;
   &:hover {
@@ -452,12 +456,25 @@ a.zoom {
     cursor: pointer;
   }
 }
+.zoom-id {
+	background-color: #626262;
+	color: #fff;
+	text-align: left;
+	padding-left: 1em;
+	&:hover {
+		background-color: #eaeaea;
+		color: #313131;
+	}
+}
 
 a.zoom {
   display: inline-block;
   // margin-top: 1em;
   text-decoration: none;
-  width: auto;
+  // width: auto;
   padding: 0.5em 1em;
-
+  background-color: #5cd359;
+  &:hover {
+  	background-color: #25d422;
+  }
 }
