--- a/components/sass/host-management.scss
+++ b/components/sass/host-management.scss
@@ -15,7 +15,24 @@
 	max-width: 600px;
 	padding: 1em;
 	background-color: rgba(0,0,0,0.5); 
-	// height: 200px;
+	p.t-nav {
+		width: 100%;
+		text-align: right;
+		padding-right: 0.5em;
+		margin: 0;
+		a {
+			font-size: 0.8em;
+			padding: 0.25em 1em;
+			background-color: rgba(255,255,255,0.4);
+			color: #fff;
+			text-decoration: none;
+			transition: all 0.2s ease;
+			&:hover {
+				background-color: rgba(255,255,255,0.2);
+				color: #fff;
+			}
+		}
+	}
 	h2 {
 		padding-bottom: 0.25em;
 		border-bottom: 1px solid rgba(255,255,255,0.4);
@@ -23,6 +40,20 @@
 	}
 	p {
 		margin: 0.25em 0 1.5em;
+	}
+	p.bob-1 {
+		margin: 0.25 0 0.75em 0;
+		padding:0.25em 0em 0.5em;
+		border-bottom: 1px solid rgba(255,255,255,0.1);
+	}
+	p.th-un {
+		margin: 0.25em 0 0;
+		padding-top: 0.25em;
+	}
+	p.th-em {
+		margin: 0 0 0.75em 0;
+		padding-bottom: 0.5em;
+		border-bottom: 1px solid rgba(255,255,255,0.1);
 	}
 	form {
 		display: flex;
